Snap Base in Camera View crashes Blender #115153

Closed
opened 2023-11-19 22:20:07 +01:00 by Krzysztof Kowalczyk · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08
Worked: (newest version of Blender that worked as expected)

Short description of error
Setting Snap Base for Camera transformation crashes Blender while in Camera View.

Exact steps for others to reproduce the error

  1. Select Camera;
  2. Switch to Camera View - press Num0;
  3. Press G (or R, S), press B - Blender crashes;
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Worked: (newest version of Blender that worked as expected) **Short description of error** Setting Snap Base for Camera transformation crashes Blender while in Camera View. **Exact steps for others to reproduce the error** 1. Select Camera; 2. Switch to Camera View - press Num0; 3. Press G (or R, S), press B - Blender crashes;
Krzysztof Kowalczyk added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-19 22:20:08 +01:00
Jesse Yurkovich added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-20 05:59:50 +01:00
Member

snap base feature was added in 3010f1233b
cc @mano-wii

`snap base` feature was added in 3010f1233b299be61f732acf1ea7aaa4b70017be cc @mano-wii
Member

This is due to accessing function call back which points to null. For camera view snap_target_fn is not set in setSnappingCallback hence the crash.

This is due to accessing function call back which points to null. For camera view `snap_target_fn` is not set in `setSnappingCallback` hence the crash.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-20 15:11:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115153
No description provided.