source/blender/editors/transform/transform.cc
@@ -707,6 +707,10 @@ static bool transform_modal_item_poll(const wmOperator *op, int value)
         /* More modes can be added over time if this feature proves useful for them. */
         return false;
       }
+      if (t->options & CTX_CAMERA) {
+        /* Not supported. */
+        return false;
+      }
       break;
     }
     case TFM_MODAL_PASSTHROUGH_NAVIGATE:
